--- a/Index.html
+++ b/Index.html
@@ -1,3 +1,10 @@
-Hola gente, soy Iker
-Esta es el segundo comentario
-Tercer comentario desde visual studio code
+<html>
+    <body>
+    Hola gente, soy Iker
+    Esta es el segundo comentario
+    Tercer comentario desde visual studio code
+    </body>
+
+
+
+</html>
